does this fix the stretching?

--- a/src/styles/navspace.css
+++ b/src/styles/navspace.css
@@ -29,6 +29,8 @@
 }
 
 .nav-picture {
+	display: block;
+	
 	width: 30%;
 	height: auto;
 }
